$Id$

****************************** DRUPAL 5 BRANCH ********************************

September 16, 2008
------------------
#309066 by asxnot: Fixed PHP 4 issue with forum list icons.

September 14, 2008
------------------
#291084 by grn, Michelle: More fixes for collapsable containers.
#303542 by Michelle: Updated README.txt
#299258 by Michelle: Documented icon sources.

September 13, 2008
------------------
#291084 by grn, Michelle: grn dded initial jquery to make collapsable containers work. Michelle added the PHP to set the classes.
#303556 by alpritt: Fixed no background showing in header on forum icon column.
NOISSUE by Michelle: Changed jump to first reply on top of forum nodes to show total replies as well.
#303556 by Michelle: Fixed issue with topic list header.

September 7, 2008
-----------------
NOISSUE by Michelle: Cleaned up user info .tpl and modules that feed it.
#303799 by Michelle: Moved folder icons into their own column. Also cleaned up forum list tpl.
#303799 by Michelle: Fixed issue with indenting when no containers.

September 2, 2008
-----------------
NOISSUE by Michelle: Fixed joined date to not use hardcoded format. Regex provided by Morbus.
NOISSUE by Michelle: Re-arranged functions and cleaned up some comments.
#268684 by Michelle: Removed old themes directory.
#268684 by Michelle: Switched to using styles.  (Theme changes: Numerous. Will have docs by next alpha.)
#268684 by Michelle: Backport: Cleaned up advf-forum-topic-list.tpl.php and moved some logic into the preprocess.
#268684 by Michelle: Backport: Added classes to table header for topic list and cleaned up empty fields.
#238668 by ixeft, Michelle: Backport: Added N new posts to forum overview. 
#268684 by Michelle: Added code to change forum icon when new posts. 
#268684 by Michelle: Added new forum icons.
#268684 by Michelle: Changed 'mark as read' to use new icon.
#301089 by George2: Only print title div if there is a title on the comment.